fix(privacy page): fix scroll issue on mobile device

--- a/pages/setup/privacy/Privacy.less
+++ b/pages/setup/privacy/Privacy.less
@@ -1,36 +1,38 @@
 .container {
   margin: 0 auto;
-  padding: @xlarge-spacing;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-content: flex-end;
   flex-wrap: nowrap;
   flex-direction: column;
+  section {
+    padding: @xlarge-spacing;
+    margin-bottom: 5rem;
+    .privacy-body {
+      min-width: 16rem;
+      align-self: center;
+      margin: 0 @normal-spacing;
+      margin-top: 20vh;
 
-  .privacy-body {
-    min-width: 16rem;
-    align-self: center;
-    margin: 0 @normal-spacing;
-    margin-bottom: 25vh;
-
-    .subtitle {
-      margin-bottom: @xlight-spacing;
-      text-transform: uppercase;
-    }
-
-    .switch-column {
-      max-width: 75px;
-    }
-
-    .center {
-      text-align: center;
       .subtitle {
-        font-weight: bold;
+        margin-bottom: @xlight-spacing;
+        text-transform: uppercase;
       }
-    }
-    .right {
-      float: right;
+
+      .switch-column {
+        max-width: 75px;
+      }
+
+      .center {
+        text-align: center;
+        .subtitle {
+          font-weight: bold;
+        }
+      }
+      .right {
+        float: right;
+      }
     }
   }
 }
